--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,3 +20,28 @@ h2 {
   font-size: 0.8rem;
   margin: 0.1rem;
 }
+
+/* carousel */
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+  display: flex;
+}
+.carousel-caption {
+  position: absolute;
+  top: 0;
+}
+
+.carousel-caption h2 {
+  color: #fff;
+}
+
+.carousel img {
+  height: 22rem;
+  padding: 2rem;
+  margin: 2.5rem;
+  border-radius: 50%;
+}
+.carousel a {
+  margin: 0 auto;
+}
